# sunce

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  debug_timezone.rs  dist-workspace.toml  install-completions.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
src/: calculation.rs  cli.rs  compute.rs  coordinate_parser.rs  data.rs  datetime_parser.rs  datetime_utils.rs  engine.rs  error.rs  file_input.rs  input_parser.rs  input_parsing.rs  iterators.rs  lib.rs  main.rs  output.rs  parquet.rs  parquet_output.rs  parsed.rs  parsing.rs  performance.rs  planner.rs  position.rs  predicate.rs  refraction.rs  sunrise.rs  sunrise_formatters.rs  sunrise_output.rs  table_format.rs  time_series.rs  timezone.rs  timezone_utils.rs  types.rs  validate.rs
src/data/: config.rs  expansion.rs  mod.rs  time_utils.rs  types.rs  validation.rs
src/output/: formatters.rs
tests/: cli_parsing_tests.rs  critical_ci_tests.rs  dst_integration_tests.rs  edge_case_integration_tests.rs  file_input_integration_tests.rs  integration_tests.rs  json_output_tests.rs  parquet_integration_tests.rs  predicate_integration_tests.rs  reference_accuracy_tests.rs  show_inputs_tests.rs  sunrise_integration_tests.rs  table_format_tests.rs  twilight_integration_tests.rs
tests/common/: mod.rs
tests/fixtures/: position_oracles.csv  sunrise_oracles.csv
