[package]
name = "sunce"
version = "0.1.6-dev"
edition = "2024"
rust-version = "1.90"
description = "High-performance command-line solar position calculator"
license = "MIT"
repository = "https://github.com/klausbrunner/sunce"
homepage = "https://github.com/klausbrunner/sunce"
documentation = "https://github.com/klausbrunner/sunce"
readme = "README.md"
authors = ["Klaus Brunner <klaus.brunner@gmail.com>"]
keywords = ["solar", "sun", "astronomy", "sunrise", "sunset"]
categories = ["command-line-utilities", "science"]
exclude = [
    "/.github/",
    "/tests/",
    "/docs/",
    "*.md",
    "!README.md"
]

[[bin]]
name = "sunce"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "help"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
thiserror = "1.0"
solar-positioning = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
dist-version = "0.30.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

unix-archive = ".tar.zst"
