[package]
name = "sunce"
version = "0.3.7-dev"
edition = "2024"
rust-version = "1.93"
description = "High-performance command-line solar position calculator"
license = "MIT"
repository = "https://github.com/klausbrunner/sunce"
homepage = "https://github.com/klausbrunner/sunce"
documentation = "https://github.com/klausbrunner/sunce"
readme = "README.md"
authors = ["Klaus Brunner <klaus.brunner@gmail.com>"]
keywords = ["solar", "sun", "astronomy", "sunrise", "sunset"]
categories = ["command-line-utilities", "science"]
include = [
    "src/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE"
]

[[bin]]
name = "sunce"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
solar-positioning = "0.4"
arrow = { version = "57", default-features = false, optional = true }
parquet = { version = "57", features = ["arrow", "snap"], default-features = false, optional = true }
iana-time-zone = "0.1"
serde = "1"
serde_json = "1"

[features]
default = ["parquet"]
parquet = ["dep:arrow", "dep:parquet"]

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
bytes = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Optimize most dependencies for size with some speed consideration
[profile.release.package."*"]
opt-level = "s"
strip = true

# Keep performance-critical crates optimized for speed
[profile.release.package.sunce]
opt-level = 3
[profile.release.package.solar-positioning]
opt-level = 3
[profile.release.package.chrono]
opt-level = 3
[profile.release.package.chrono-tz]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
